fix: add hidden class styles for mech-output and resizer for improved visibility control

--- a/include/style.css
+++ b/include/style.css
@@ -1748,6 +1748,16 @@ mark {
     text-decoration: underline;
 }
 
+#mech-output.hidden {
+    display: none;
+    width: 0px;
+}
+
+#resizer.hidden {
+    display: none;
+    width: 0px;
+}
+
 .mech-command {
     background-color: #171D21;
     border: 1px solid #777;
